fix scrolling on mobile

--- a/styles/components/scrollbar.scss
+++ b/styles/components/scrollbar.scss
@@ -33,7 +33,7 @@
         width: 10px;
         opacity: 0.7;
         border-radius: 10px;
-        background-color: var(--accent);
+        background-color: var(--grey-light);
       }
     }
   }
